--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
   <head>
-    <title>Lesespuren</title>
+    <title>Click-Stories</title>
   </head>
   <body>
-    <h1>Digitale Lesespuren oder nicht lineare Geschichten</h1>
+    <h1>Geschichten bei denen du mitentscheiden kannst.</h1>
     <p></p>
     <ul>
-      <li><a href="Im_Schulzimmer.html">Im Schulzimmer</a></li>
+      <li><a href="Im_Schulzimmer.html ">Im Schulzimmer</a></li>
+      <li><a href="Im_Spukschloss.html ">Im Spukschloss</a></li>
+      <li><a href="Im_Spukschloss.html ">Im Spukschloss</a></li>  
     </ul>
     </body>
 </html>
