--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li><a href="Im_Schulzimmer.html ">Im Schulzimmer</a></li>
       <li><a href="Im_Spukschloss.html ">Im Spukschloss</a></li>
-      <li><a href="Im_Spukschloss.html ">Im Spukschloss</a></li>  
+      <li><a href="Gute_Frage.html ">Jackenfrage</a></li>  
     </ul>
     </body>
 </html>
