--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Click-Stories</title>
   </head>
   <body>
+    <font size=3>
     <h1>Geschichten bei denen du mitentscheiden kannst.</h1>
     <p></p>
     <ul>
@@ -10,5 +11,8 @@
       <li><a href="Im_Spukschloss.html ">Im Spukschloss</a></li>
       <li><a href="Gute_Frage.html ">Jackenfrage</a></li>  
     </ul>
+    </font>
     </body>
 </html>
+
+
