--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <font size=5>
-    <h1>Geschichten bei denen du mitentscheiden kannst.</h1>
+    <h1>Geschichten, bei denen du mitentscheiden kannst.</h1>
     <p></p>
     <ul>
       <li><a href="Im_Schulzimmer.html ">Im Schulzimmer</a></li>
